@@ -27,6 +27,7 @@ Other contributors, listed alphabetically, are:
 * Joel B. Mohler <joel@kiwistrawberry.us>
 * John David Reaver <jdreaver@adlerhorst.com>
 * Jonas Olson <jolson@kth.se>
+* Jules Chéron <me@julescheron.com>
 * Kaido Kert <kaidokert@gmail.com>
 * Kenneth D. Mankoff <mankoff@gmail.com>
 * Kevin Davies <kdavies4@gmail.com>
