@@ -8,6 +8,7 @@ Pint Changelog
   (Issue #979, Thanks Jon Thielen)
 - Allow constants in units by using a leading underscore (Issue #989, Thanks
   Juan Nunez-Iglesias)
+- Fixed bug where to_compact handled prefix units incorrectly (Issue #960)
 
 0.10.1 (2020-01-07)
 -------------------
